# triaccel

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
triaccel/: __init__.py  __init__.pyi  _core.cpp  _core.pyi  _debug_plot.py  viz.py  viz.pyi
triaccel/detail/: __init__.py  graph_ops.hpp  utils.hpp
tutorial/: main.py
